src/main/java/logic/parser/Qbf_parser.jjt
/* Qbf_parser.jj
 * Parses a quantified boolean formula in QBF Format 1.0
 * as specified at http://www.qbflib.org/boole.html
 *
 *	<input>		::= <exp> EOF
 *	<exp>		::= <NOT> <exp> | <q_set> <exp> | <LP> <exp> <op> <exp> <RP>
 *				| <LP> <exp> <RP> | <VAR>
 *	<q_set> 	::= <quant> <LSP> <var_list> <RSP>
 *	<quant> 	::= <EXISTS> | <FORALL>
 *	<var_list> 	::= <VAR> <var_list> | <VAR>
 *	<op>		::= <OR> | <AND>
 *	<NOT>		::= "!"
 *	<LP>		::= "("
 *	<RP>		::= ")"
 *	<LSP>		::= "["
 *	<RSP>		::= "]"
 *	<OR>		::= "|"
 *	<AND>		::= "&"
 *	<EXISTS> 	::= "exists"
 *	<FORALL> 	::= "forall"
 *	<VAR>		::= {A sequence of non-special ASCII characters} 
 */

options {
	MULTI = true;
	NODE_DEFAULT_VOID = true;
	// VISITOR = true;
	 STATIC = false;
}

PARSER_BEGIN(Qbf_parser)

package main.java.logic.parser;
import java.util.Vector;
import java.util.HashMap;
import java.util.regex.Pattern;
import java.io.*;

public class Qbf_parser implements Serializable {

	private static Vector<Integer> eVars = new Vector<Integer>();
	private static Vector<Integer> aVars = new Vector<Integer>();
	private static Vector<Integer> vars  = new Vector<Integer>();
	private static HashMap<Integer, Integer> literalCount  = new HashMap<Integer, Integer>();
	private static SimpleNode root;
	
	public HashMap<Integer, Integer> getLiteralCount() {
		return this.literalCount;
	}

	public Vector<Integer> getEVars() {
		return this.eVars;
	}

	public Vector<Integer> getAVars() {
		return this.aVars;
	}

	public Vector<Integer> getVars() {
		return this.vars;
	}

	public SimpleNode getRootNode() {
System.out.println("request for root node " + jjtree.rootNode().getClass().getName());
		return (SimpleNode)this.jjtree.rootNode();
	}
}

PARSER_END(Qbf_parser)

SKIP : {" "}
SKIP : {"\n" | "\r" | "\r\n" }

// terminals
TOKEN : { < AND		: "&" > }
TOKEN : { < OR		: "|" > }
TOKEN : { < NOT		: "!" > }

TOKEN : { < LP		: "(" > }
TOKEN : { < RP		: ")" > }
TOKEN : { < LSP		: "[" > }
TOKEN : { < RSP		: "]" > }

TOKEN : { < EXISTS	: "exists" > }
TOKEN : { < FORALL	: "forall" > }

TOKEN : { < VAR		: (["a"-"z"])(["0"-"9"])+ > }

// non-terminals
// *	<input>		::= <exp> EOF
void Input() #Input:	// Node with one child (Exp())
{}
{
	Exp()
	<EOF>
}

// *	<var_list> 	::= <VAR> <var_list> | <VAR>
//{}
//{
////	Var()
////	|
////	Var()
//}

void And() #And:	// Node with two children (Exp(), Exp())
{}
{       
	<AND> { jjtThis.op = "&"; } 
}

void Or() #Or:	// Node with two children (Exp(), Exp())
{}
{
	<OR> { jjtThis.op = "|"; }
}

void Not():	// Node with one child (Exp())
{}
{
 	<NOT>
}
void Exists():
{}
{
	<EXISTS>// { jjtThis.op = "e"; }
}

void Forall():
{}
{
	<FORALL>// { jjtThis.op = "f";}
}

void Var() #Var:
{
	Token t;
}
{
	t = <VAR>
	{	// Stripping down the variable name to a number (e.g. "v123" -> 123 and
		// adding it to a vector containing all variable numbers as well as to a
		// vector with all exist- or allquantified variables (that's the reason
		// for the funny String s fallthrough)
		String varName = t.image.replaceAll("[a-z]*","");
		int varNumber = Integer.valueOf(varName).intValue();
		varNumber++;
		jjtThis.var = varNumber;
/*		if (s == "e") {*/
/*			eVars.add(varNumber);*/
/*		}*/
/*		if (s == "f") {*/
/*			aVars.add(varNumber);*/
/*		}*/
/*		if (s == "") {*/
			
			if (literalCount.get(varNumber) != null) {
				literalCount.put(varNumber, literalCount.get(varNumber) + 1);
			}
			else {
				literalCount.put(varNumber, 1);			
			}	
			if (!vars.contains(varNumber)) {
				vars.add(varNumber);
			}
/*		}*/
	}
}

void VarQ(String s):
{
	Token t;
}
{
	t = <VAR>
	{	// Stripping down the variable name to a number (e.g. "v123" -> 123 and
		// adding it to a vector containing all variable numbers as well as to a
		// vector with all exist- or allquantified variables (that's the reason
		// for the funny String s fallthrough)
		String varName = t.image.replaceAll("[a-z]*","");
		int varNumber = Integer.valueOf(varName).intValue();
		varNumber++;
		if (s == "e") {
			if (!vars.contains(varNumber)) {
				eVars.add(varNumber);
			}
		}
		if (s == "f") {
			if (!vars.contains(varNumber)) {
				aVars.add(varNumber);
			}
		} 
	}
}

// *	<exp>		::= <NOT> <exp> | <q_set> <exp> | <LP> <exp> <op> <exp> <RP>
// *				| <LP> <exp> <RP> | <VAR>
void Exp() #void:
{
	String op = "";
}
{
	(
		Not() { jjtThis.op = "!"; }
		Exp()
	) #Logical(1)
	|
	Q_set()
	Exp()
	|
	<LP>
	(
		Exp()
		(
			(
				"|" {jjtThis.op = "|"; }
				|
				"&" {jjtThis.op = "&"; }
			)
			Exp()
		)?
	) #Logical(>1)  
	<RP>
	|
	Var()
//	|
//	<EOF>
}

// *	<q_set> 	::= <quant> <LSP> <var_list> <RSP>
void Q_set() #void:
{
	String s;
}
{
	s = Quant()
	<LSP>
	VarQ(s)
	<RSP>
}

// *	<quant> 	::= <EXISTS> | <FORALL>
String Quant() #void:
{}
{
	Exists() { return "e"; }
	|
	Forall() { return "f"; }
}

// *	<op>		::= <OR> | <AND>
void Op() #void:
{}
{
	Or()
	|
	And()
}
